--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  justify-content: center;
 }
 
 .grid {
@@ -40,4 +41,16 @@
 
 .box {
   background-image: url('img/box.png');
+}
+
+body{
+  margin:20px auto;
+  padding:20px 20px 20px 20px;
+  border:2px solid #bbb;
+  border-radius:10px;
+  font-family:Verdana,Helvetica,sans-serif;
+  color:#242424;
+  line-height:1.4;
+  font-size:16px;
+  max-width:720px
 }
